Updating files for 1.0